--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
         "minio": "^8.0.5"
     },
     "devDependencies": {
-        "electron": "^30.5.1",
-        "electron-builder": "^26.0.12"
+        "electron": "^22.3.27",
+        "electron-builder": "^24.9.1"
     },
     "keywords": [],
     "author": "",
@@ -45,7 +45,8 @@
                     ]
                 }
             ],
-            "icon": "build/icon.ico"
+            "icon": "build/icon.ico",
+            "signAndEditExecutable": false
         },
         "nsis": {
             "oneClick": false,
@@ -66,7 +67,8 @@
               "to": "extraResources",
               "filter": ["**/*"]
             }
-          ]
+          ],
+        "electronVersion": "22.3.27"
     },
     "electron-updater": "^6.1.7"
 }
