--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
     "name": "zhongshang-electron",
-    "version": "1.3.7",
+    "version": "1.3.8",
     "main": "main.js",
     "scripts": {
         "start": "electron .",
         "pack": "electron-builder --dir",
         "dist": "electron-builder --win",
+        "dist:cn": "$env:ELECTRON_MIRROR='https://npmmirror.com/mirrors/electron/'; $env:ELECTRON_BUILDER_BINARIES_MIRROR='https://npmmirror.com/mirrors/electron-builder-binaries/'; electron-builder --win",
         "dist:mac": "electron-builder --mac",
         "dist:win": "electron-builder --win --publish always",
         "dist:win:local": "electron-builder --win",
@@ -41,7 +42,8 @@
                 {
                     "target": "nsis",
                     "arch": [
-                        "ia32"
+                        "ia32",
+                        "x64"
                     ]
                 }
             ],
