--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "zhongshang-electron",
-    "version": "1.3.8",
+    "version": "1.4.0",
     "main": "main.js",
     "scripts": {
         "start": "electron .",
@@ -36,7 +36,7 @@
     "license": "ISC",
     "description": "",
     "build": {
-        "productName": "zhongshang",
+        "productName": "授权工具",
         "win": {
             "target": [
                 {
