--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "zhongshang-electron",
-    "version": "1.5.0",
+    "version": "1.5.2",
     "main": "main.js",
     "scripts": {
         "start": "electron .",
@@ -65,11 +65,13 @@
         ],
         "extraResources": [
             {
-              "from": "extraResources/",
-              "to": "extraResources",
-              "filter": ["**/*"]
+                "from": "extraResources/",
+                "to": "extraResources",
+                "filter": [
+                    "**/*"
+                ]
             }
-          ],
+        ],
         "electronVersion": "22.3.27"
     },
     "electron-updater": "^6.1.7"
