更新日志中文编码

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "1.5.3",
     "main": "main.js",
     "scripts": {
-        "start": "electron .",
+        "start": "chcp 65001 & electron .",
         "pack": "electron-builder --dir",
         "dist": "electron-builder --win",
         "dist:cn": "$env:ELECTRON_MIRROR='https://npmmirror.com/mirrors/electron/'; $env:ELECTRON_BUILDER_BINARIES_MIRROR='https://npmmirror.com/mirrors/electron-builder-binaries/'; electron-builder --win",
